[project]
name = "photosharingapp-11-9-25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.121.1",
    "greenlet>=3.0.0",
    "imagekitio>=4.2.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.5",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.38.0"
]
